--- a/package.json
+++ b/package.json
@@ -39,5 +39,16 @@
   },
   "scripts": {
     "test": "karma start test\\karma.conf.js"
+  },
+  "dependencies": {
+    "cryptiles": "^4.1.2",
+    "debug": "^2.6.9",
+    "fresh": "^0.5.2",
+    "handlebars": "^4.0.12",
+    "hawk": "^3.1.3",
+    "hoek": "^4.2.1",
+    "lodash": "^4.17.10",
+    "mime": "^1.6.0",
+    "uglify-js": "^2.8.29"
   }
 }
